Zend/zend_ini_parser.output
State 8 conflicts: 2 shift/reduce, 4 reduce/reduce
State 9 conflicts: 2 shift/reduce, 4 reduce/reduce
State 18 conflicts: 1 shift/reduce


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement_list statement
    2               | /* empty */

    3 statement: TC_STRING '=' string_or_value
    4          | TC_STRING BRACK '=' string_or_value
    5          | TC_STRING
    6          | SECTION
    7          | '\n'

    8 string_or_value: expr
    9                | CFG_TRUE
   10                | CFG_FALSE
   11                | var_string_list
   12                | '\n'
   13                | /* empty */

   14 var_string_list: var_string_list cfg_var_ref
   15                | var_string_list TC_ENCAPSULATED_STRING
   16                | var_string_list constant_string
   17                | /* empty */

   18 cfg_var_ref: TC_DOLLAR_CURLY TC_STRING '}'

   19 expr: constant_string
   20     | expr '|' expr
   21     | expr '&' expr
   22     | '~' expr
   23     | '!' expr
   24     | '(' expr ')'

   25 constant_string: TC_STRING


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 7 12
'!' (33) 23
'&' (38) 21
'(' (40) 24
')' (41) 24
'=' (61) 3 4
'|' (124) 20
'}' (125) 18
'~' (126) 22
error (256)
TC_STRING (258) 3 4 5 18 25
TC_ENCAPSULATED_STRING (259) 15
BRACK (260) 4
SECTION (261) 6
CFG_TRUE (262) 9
CFG_FALSE (263) 10
TC_DOLLAR_CURLY (264) 18


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
statement_list (20)
    on left: 1 2, on right: 0 1
statement (21)
    on left: 3 4 5 6 7, on right: 1
string_or_value (22)
    on left: 8 9 10 11 12 13, on right: 3 4
var_string_list (23)
    on left: 14 15 16 17, on right: 11 14 15 16
cfg_var_ref (24)
    on left: 18, on right: 14
expr (25)
    on left: 19 20 21 22 23 24, on right: 8 20 21 22 23 24
constant_string (26)
    on left: 25, on right: 16 19


state 0

    0 $accept: . statement_list $end

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 1


state 1

    0 $accept: statement_list . $end
    1 statement_list: statement_list . statement

    $end       shift, and go to state 2
    TC_STRING  shift, and go to state 3
    SECTION    shift, and go to state 4
    '\n'       shift, and go to state 5

    statement  go to state 6


state 2

    0 $accept: statement_list $end .

    $default  accept


state 3

    3 statement: TC_STRING . '=' string_or_value
    4          | TC_STRING . BRACK '=' string_or_value
    5          | TC_STRING .

    BRACK  shift, and go to state 7
    '='    shift, and go to state 8

    $default  reduce using rule 5 (statement)


state 4

    6 statement: SECTION .

    $default  reduce using rule 6 (statement)


state 5

    7 statement: '\n' .

    $default  reduce using rule 7 (statement)


state 6

    1 statement_list: statement_list statement .

    $default  reduce using rule 1 (statement_list)


state 7

    4 statement: TC_STRING BRACK . '=' string_or_value

    '='  shift, and go to state 9


state 8

    3 statement: TC_STRING '=' . string_or_value

    TC_STRING  shift, and go to state 10
    CFG_TRUE   shift, and go to state 11
    CFG_FALSE  shift, and go to state 12
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '\n'       shift, and go to state 15
    '('        shift, and go to state 16

    $end                    reduce using rule 13 (string_or_value)
    $end                    [reduce using rule 17 (var_string_list)]
    TC_STRING               [reduce using rule 13 (string_or_value)]
    TC_STRING               [reduce using rule 17 (var_string_list)]
    TC_ENCAPSULATED_STRING  reduce using rule 17 (var_string_list)
    SECTION                 reduce using rule 13 (string_or_value)
    SECTION                 [reduce using rule 17 (var_string_list)]
    TC_DOLLAR_CURLY         reduce using rule 17 (var_string_list)
    '\n'                    [reduce using rule 13 (string_or_value)]
    '\n'                    [reduce using rule 17 (var_string_list)]
    $default                reduce using rule 13 (string_or_value)

    string_or_value  go to state 17
    var_string_list  go to state 18
    expr             go to state 19
    constant_string  go to state 20


state 9

    4 statement: TC_STRING BRACK '=' . string_or_value

    TC_STRING  shift, and go to state 10
    CFG_TRUE   shift, and go to state 11
    CFG_FALSE  shift, and go to state 12
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '\n'       shift, and go to state 15
    '('        shift, and go to state 16

    $end                    reduce using rule 13 (string_or_value)
    $end                    [reduce using rule 17 (var_string_list)]
    TC_STRING               [reduce using rule 13 (string_or_value)]
    TC_STRING               [reduce using rule 17 (var_string_list)]
    TC_ENCAPSULATED_STRING  reduce using rule 17 (var_string_list)
    SECTION                 reduce using rule 13 (string_or_value)
    SECTION                 [reduce using rule 17 (var_string_list)]
    TC_DOLLAR_CURLY         reduce using rule 17 (var_string_list)
    '\n'                    [reduce using rule 13 (string_or_value)]
    '\n'                    [reduce using rule 17 (var_string_list)]
    $default                reduce using rule 13 (string_or_value)

    string_or_value  go to state 21
    var_string_list  go to state 18
    expr             go to state 19
    constant_string  go to state 20


state 10

   25 constant_string: TC_STRING .

    $default  reduce using rule 25 (constant_string)


state 11

    9 string_or_value: CFG_TRUE .

    $default  reduce using rule 9 (string_or_value)


state 12

   10 string_or_value: CFG_FALSE .

    $default  reduce using rule 10 (string_or_value)


state 13

   22 expr: '~' . expr

    TC_STRING  shift, and go to state 10
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '('        shift, and go to state 16

    expr             go to state 22
    constant_string  go to state 20


state 14

   23 expr: '!' . expr

    TC_STRING  shift, and go to state 10
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '('        shift, and go to state 16

    expr             go to state 23
    constant_string  go to state 20


state 15

   12 string_or_value: '\n' .

    $default  reduce using rule 12 (string_or_value)


state 16

   24 expr: '(' . expr ')'

    TC_STRING  shift, and go to state 10
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '('        shift, and go to state 16

    expr             go to state 24
    constant_string  go to state 20


state 17

    3 statement: TC_STRING '=' string_or_value .

    $default  reduce using rule 3 (statement)


state 18

   11 string_or_value: var_string_list .
   14 var_string_list: var_string_list . cfg_var_ref
   15                | var_string_list . TC_ENCAPSULATED_STRING
   16                | var_string_list . constant_string

    TC_STRING               shift, and go to state 10
    TC_ENCAPSULATED_STRING  shift, and go to state 25
    TC_DOLLAR_CURLY         shift, and go to state 26

    TC_STRING  [reduce using rule 11 (string_or_value)]
    $default   reduce using rule 11 (string_or_value)

    cfg_var_ref      go to state 27
    constant_string  go to state 28


state 19

    8 string_or_value: expr .
   20 expr: expr . '|' expr
   21     | expr . '&' expr

    '|'  shift, and go to state 29
    '&'  shift, and go to state 30

    $default  reduce using rule 8 (string_or_value)


state 20

   19 expr: constant_string .

    $default  reduce using rule 19 (expr)


state 21

    4 statement: TC_STRING BRACK '=' string_or_value .

    $default  reduce using rule 4 (statement)


state 22

   20 expr: expr . '|' expr
   21     | expr . '&' expr
   22     | '~' expr .

    $default  reduce using rule 22 (expr)


state 23

   20 expr: expr . '|' expr
   21     | expr . '&' expr
   23     | '!' expr .

    $default  reduce using rule 23 (expr)


state 24

   20 expr: expr . '|' expr
   21     | expr . '&' expr
   24     | '(' expr . ')'

    '|'  shift, and go to state 29
    '&'  shift, and go to state 30
    ')'  shift, and go to state 31


state 25

   15 var_string_list: var_string_list TC_ENCAPSULATED_STRING .

    $default  reduce using rule 15 (var_string_list)


state 26

   18 cfg_var_ref: TC_DOLLAR_CURLY . TC_STRING '}'

    TC_STRING  shift, and go to state 32


state 27

   14 var_string_list: var_string_list cfg_var_ref .

    $default  reduce using rule 14 (var_string_list)


state 28

   16 var_string_list: var_string_list constant_string .

    $default  reduce using rule 16 (var_string_list)


state 29

   20 expr: expr '|' . expr

    TC_STRING  shift, and go to state 10
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '('        shift, and go to state 16

    expr             go to state 33
    constant_string  go to state 20


state 30

   21 expr: expr '&' . expr

    TC_STRING  shift, and go to state 10
    '~'        shift, and go to state 13
    '!'        shift, and go to state 14
    '('        shift, and go to state 16

    expr             go to state 34
    constant_string  go to state 20


state 31

   24 expr: '(' expr ')' .

    $default  reduce using rule 24 (expr)


state 32

   18 cfg_var_ref: TC_DOLLAR_CURLY TC_STRING . '}'

    '}'  shift, and go to state 35


state 33

   20 expr: expr . '|' expr
   20     | expr '|' expr .
   21     | expr . '&' expr

    $default  reduce using rule 20 (expr)


state 34

   20 expr: expr . '|' expr
   21     | expr . '&' expr
   21     | expr '&' expr .

    $default  reduce using rule 21 (expr)


state 35

   18 cfg_var_ref: TC_DOLLAR_CURLY TC_STRING '}' .

    $default  reduce using rule 18 (cfg_var_ref)
